--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                                         <p class="fst-italic text-white"><i class="fa-solid fa-quote-left"></i>Carla, busting with potential, great initiative and a great personality with a can do spirt. When responsibly comes her way she takes charge. Being elected as a team rep she has shown prowess in working in a team and communicating effectively to plan projects and events. A insider with a outside perspective, with those skills she would be a asset to any team and with her work ethic and drive she's assured for success.<i class="fa-solid fa-quote-right"></i></p>
                                     </div>
                                     <div class="test-person text-center">
-                                        <img src="./images/Emile.JPG" class="testpic rounded-circle" style=width:100px; alt="zoepic"/>
+                                        <img src="./images/Emile.JPG" class="testpic rounded-circle" style=width:100px; alt="test1pic"/>
                                         <h4>Emile Van Wyk - Colleague </h4>
                                     </div>
                                 </div>
@@ -341,17 +341,26 @@
     Her kind personality combined with her determined work ethic makes her an absolute pleasure to have around in the work environment<i class="fa-solid fa-quote-right"></i></p>
                                     </div>
                                     <div class="test-person">
-                                        <img src="./images/Jesse (2).JPG" class="testpic rounded-circle" style=width:100px; alt="zoepic"/>
+                                        <img src="./images/Jesse (2).JPG" class="testpic rounded-circle" style=width:100px; alt="test2pic"/>
                                         <h4> Jesse Spence - Colleague</h4>
                                     </div>
                                 </div>
                                 <div class="testimonial carousel-item">
                                     <div class="comment text-center">
-                                        <p class="fst-italic text-white"><i class="fa-solid fa-quote-left"></i>Carla is your go-to person when you're stuck with anything work related or in your personal life. Carla is a really awesome web developer. Her insight of both design and databases really makes her such valuable team player. She indeed is an asset to any company or project.I feel honored to have worked beside her on many projects. Anything she creates always shows her passion for programming.<i class="fa-solid fa-quote-right"></i></p>
+                                        <p class="fst-italic text-white"><i class="fa-solid fa-quote-left"></i>Carla is your go-to person when you're stuck with anything work related or in your personal life. Carla is a really awesome web developer. Her insight of both design and user experience really makes her such valuable team player. She indeed is an asset to any company or project.I feel honored to have worked beside her on many projects. Anything she creates always shows her passion for programming.<i class="fa-solid fa-quote-right"></i></p>
                                     </div>
                                     <div class="test-person">
-                                        <img src="images/Ricardo (2).JPG" class="testpic rounded-circle" style=width:100px; alt="zoepic"/>
+                                        <img src="images/Ricardo (2).JPG" class="testpic rounded-circle" style=width:100px; alt="test3pic"/>
                                         <h4>Ricardo Moses - Colleague </h4>
+                                    </div>
+                                </div>
+                                <div class="testimonial carousel-item">
+                                    <div class="comment text-center">
+                                        <p class="fst-italic text-white"><i class="fa-solid fa-quote-left"></i>Carla's approach to her work is outstanding. On a personal level, she is someone you can easily connect with. She is open and ready to help with any task or project. I love seeing her creative side come to life and she is a pleasure to have in any team"<i class="fa-solid fa-quote-right"></i></p>
+                                    </div>
+                                    <div class="test-person">
+                                        <img src="images/Zoe (1).JPG" class="testpic rounded-circle" style=width:100px; alt="test4pic"/>
+                                        <h4>Zoe Van Der Schyff - Colleague </h4>
                                     </div>
                                 </div>
                                 </div>
@@ -360,6 +369,7 @@
                                 <button type="button" data-bs-target="#testimonial-indactors" class="rounded-circle" style="width: 10px; height: 10px;" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                 <button type="button" data-bs-target="#testimonial-indactors" class="rounded-circle" style="width: 10px; height: 10px;" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                 <button type="button" data-bs-target="#testimonial-indactors" class="rounded-circle" style="width: 10px; height: 10px;" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                <button type="button" data-bs-target="#testimonial-indactors" class="rounded-circle" style="width: 10px; height: 10px;" data-bs-slide-to="4" aria-label="Slide 5"></button>
                             </div>
                             
 
